classDiagram
    class IDrawable {
        <<interface>>
        -bool visible
        +Draw(frameUniforms: UniformProvider) const void
        +SetVisible(isVisible) void
    }

    class UniformProvider {
        <<abstract>>
        +Apply(shader: Shader&) const void
    }

    class IInspectable {
        <<interface>>
        +CollectInspectableFields(out, groupPrefix) void
        +CollectInspectableNodes(out, nodePrefix) void
    }

    class GameObject {
        -vector~shared_ptr~Mesh~~ meshes
        +glm::vec3 position
        +glm::vec3 rotation
        +glm::vec3 scale
        +AddMesh(mesh) void
        +Update(deltaTime) void
        +Draw(frameUniforms: UniformProvider) const void
        +Apply(shader: Shader&) const void
        +CollectInspectableFields(out, groupPrefix) void
        -BuildModelMatrix() glm::mat4
    }

    class Volume {
        <<abstract>>
        +glm::vec3 position
        +glm::vec3 rotation
        +glm::vec3 scale
        #glm::ivec3 dimensions
        #glm::vec3 spacing
        #shared_ptr~VolumeGeometry~ geometry
        #shared_ptr~Shader~ shader
        +Draw(frameUniforms: UniformProvider) const void
        +Apply(shader: Shader&) const void
        +IsValid() const bool
        +CollectInspectableFields(out, groupPrefix) void
        +CollectInspectableNodes(out, nodePrefix) void
        #GetTextureSet() const VolumeTextureSet&
        #BuildModelMatrix() glm::mat4
    }

    class FloatVolume {
        -VolumeTextureSet textureSet
        +GetTextureSet() const VolumeTextureSet&
    }

    class UInt16Volume {
        -VolumeTextureSet textureSet
        +GetTextureSet() const VolumeTextureSet&
    }

    class UInt8Volume {
        -VolumeTextureSet textureSet
        +GetTextureSet() const VolumeTextureSet&
    }

    class Mat3Volume {
        -VolumeTextureSet textureSet
        +GetTextureSet() const VolumeTextureSet&
    }

    class Skybox {
        -shared_ptr~TextureCube~ cubemap
        -shared_ptr~CubeGeometry~ geometry
        -shared_ptr~Shader~ shader
        +Draw(camera: Camera) const void
        +IsValid() const bool
    }

    IDrawable <|-- GameObject
    UniformProvider <|-- GameObject
    IInspectable <|-- GameObject

    IDrawable <|-- Volume
    UniformProvider <|-- Volume
    IInspectable <|-- Volume

    Volume <|-- FloatVolume
    Volume <|-- UInt16Volume
    Volume <|-- UInt8Volume
    Volume <|-- Mat3Volume

    Skybox ..> Camera : uses
